# fbm-fast-pricers

./: .gitignore  ALGORITHMS.md  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  bibliography.bib  dataflow.d2  include.md  project-description.md  pyproject.toml  report.md  run_pipeline.sh
benchmarks/: benchmark.cpp
data/: calibrate.py  profile_memory.py  rfsv_model.py  validate_asian.py  validate_convergence.py  validate_iv.py  validate_stability.py
memory/: memory_profiling_design.md
plots/: plot_scaling.py  plot_sensitivity.py  plot_structure.py
src/cholesky/: cholesky.hpp  cholesky_pricer.cpp
src/common/: asian_payoff.hpp  covariance.hpp  params.hpp  rng.hpp
src/fft/: fft.hpp  fft_pricer.cpp
src/hmatrix/: hmatrix.hpp  hmatrix_pricer.cpp  rsvd.hpp
src/rsvd/: lowrank.hpp  rsvd_pricer.cpp
