[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pdfminer-six>=20260107",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "yfinance>=1.2.0",
]
